2009-12-21  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tests/mpn/t-mulmod_bnm1.c (ref_mulmod_bnm1): Use ref_mul.
	* tests/mpn/t-sqrmod_bnm1.c (ref_sqrmod_bnm1): Likewise.

2009-12-20  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/mulmod_bnm1.c (mpn_mulmod_bnm1): New CRT.
	* mpn/generic/sqrmod_bnm1.c (mpn_sqrmod_bnm1): Likewise.

2009-12-20  Torbjorn Granlund  <tege@gmplib.org>

	* Change all bit counts for bignums to use mp_bitcnt_t.

	* mpn/generic/bdivmod.c: File removed.  All references purged.

	* mpn/generic/mul_fft.c (mpn_mul_fft_full): Disable.

	* gmp-impl.h: Define mpn_fft_mul as an alias for mpn_nussbaumer_mul.
	* mpn/generic/mul.c: Refer Call_fft_mul.
	* mpn/generic/mul_n.c: Likewise.
	* mpn/generic/sqr_n.c: Likewise.
	* mpn/generic/mullo_n.c: Likewise.

	* mpn/generic/mul.c: Loop also over mpn_nussbaumer_mul, as suggested by
	Marco.  Use TMP_SALLOC_LIMBS in more places.  Clean up ws allocation.

2009-12-19  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/toom_interpolate_8pts.c: Nailify.

2009-12-19  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/mul.c: Major rewrite.  Use toom43, toom53, toom63.
	Call mpn_nussbaumer_mul for largest operands.

	* tune/speed.h (SPEED_ROUTINE_MPN_TOOM32_FOR_TOOM43_MUL): New macro.
	(SPEED_ROUTINE_MPN_TOOM43_FOR_TOOM32_MUL): New macro.
	(SPEED_ROUTINE_MPN_TOOM32_FOR_TOOM53_MUL): New macro.
	(SPEED_ROUTINE_MPN_TOOM53_FOR_TOOM32_MUL): New macro.
	(SPEED_ROUTINE_MPN_TOOM42_FOR_TOOM53_MUL): New macro.
	(SPEED_ROUTINE_MPN_TOOM53_FOR_TOOM42_MUL): New macro.
	* tune/common.c (speed_mpn_toom63_mul): New function.
	(speed_mpn_toom32_for_toom43_mul): New function.
	(speed_mpn_toom43_for_toom32_mul): New function.
	(speed_mpn_toom32_for_toom53_mul): New function.
	(speed_mpn_toom53_for_toom32_mul): New function.
	(speed_mpn_toom42_for_toom53_mul): New function.
	(speed_mpn_toom53_for_toom42_mul): New function.
	* tune/tuneup.c (tune_mul_n): New name for old tune_mul.